--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -2,10 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rajdhani:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 :root {
   --color-main: #dc2626;
   --color-text: #6c6b6b;
   --color-heading: #000;
+  font-family: "Montserrat", "sans-serif";
 }
 
 @layer base {
@@ -79,6 +82,10 @@
     @apply flex justify-between items-center gap-3;
   }
 
+  .header-cta {
+    @apply flex gap-2;
+  }
+
   .header-btm {
     @apply py-4 bg-white border-b border-gray-100 shadow-sm;
   }
@@ -92,13 +99,30 @@
     @apply flex flex-wrap items-center justify-center gap-x-5 gap-y-2 mx-auto;
   }
 
+  .footer-menu {
+    @apply uppercase;
+  }
+
   .header-menu a,
   .footer-menu a {
     @apply font-medium hover:text-red-600 transition duration-300;
   }
 
-  .footer .container {
-    @apply flex justify-center items-center flex-wrap;
+  .footer .container,
+  .footer-top .container {
+    @apply flex justify-center lg:justify-between items-center flex-wrap gap-y-3;
+  }
+
+  .footer-top {
+    @apply py-4;
+  }
+
+  .footer-mdl .container {
+    @apply flex justify-center py-4 gap-4 opacity-50 border-t border-gray-500;
+  }
+
+  .footer-btm .container {
+    @apply flex justify-center opacity-50;
   }
 
   .cards {
@@ -157,12 +181,10 @@
   .card:hover .card-title {
     @apply text-rose-600 transition underline;
   }
-  
+
   .post-actions {
     @apply flex gap-2;
   }
-
-
 
   .card:hover img {
     @apply scale-105 transition duration-300;
@@ -185,7 +207,7 @@
   .banners > .card:hover .card-title {
     @apply text-white;
   }
-  
+
   .banners img {
     @apply block object-cover  w-[100%] h-[100%] max-h-[300px];
   }
@@ -208,30 +230,30 @@
     grid-template-columns: 2fr 1fr;
   }
 
-  @media only screen and (max-width: 768px){
+  @media only screen and (max-width: 768px) {
     .page-single {
       grid-template-columns: 1fr;
     }
   }
 
   .post h1 {
-    @apply mb-2 font-medium text-3xl;
+    @apply mb-2 text-2xl font-medium;
   }
-  .post h2, .post h3, .post h4, .post h5, .post h6 {
-    @apply mb-2 font-medium text-2xl;
-    color: var(--color-heading);
+  .post h2,
+  .post h3,
+  .post h4,
+  .post h5,
+  .post h6 {
+    @apply mb-2 text-xl font-medium;
   }
-  
-  .post-lead {
-    @apply text-[20px] mt-3 mb-6 text-[#6c6b6b];
-  }
+
   .post-header {
     @apply flex flex-wrap gap-3 justify-between mb-8 mt-3;
   }
 
   .post-header svg {
-      width: 20px;
-      height: 20px;
+    width: 20px;
+    height: 20px;
   }
 
   .post-footer {
@@ -242,9 +264,12 @@
     @apply w-full object-cover aspect-auto rounded-xl;
   }
 
+  .post-lead {
+    @apply text-lg mt-3 mb-6 opacity-60;
+  }
+
   .post-content p {
-    @apply text-[15px] my-2;
-    color: var(--color-text);
+    @apply text-[15px] my-2 opacity-60;
   }
 
   .post a:hover {
@@ -274,12 +299,21 @@
   }
 
   .soc a {
-    @apply flex items-center justify-center bg-gray-200 w-[40px] h-[40px] rounded-sm transition;
+    @apply flex items-center justify-center text-black bg-gray-200 w-[40px] h-[40px] rounded-sm transition;
   }
 
   .soc a:hover {
     background-color: var(--color-main);
     color: #fff;
+  }
+
+  .soc_main a {
+    background-color: var(--color-main);
+    @apply text-white;
+  }
+
+  .soc_main a:hover {
+    @apply text-white bg-gray-800;
   }
 
   .tags {
@@ -290,4 +324,21 @@
     color: var(--color-main);
   }
 
+  .contacts {
+    @apply flex gap-x-6 gap-y-1 items-center justify-center flex-wrap;
+  }
+  .contacts a {
+    @apply flex items-center gap-2;
+  }
+
+  .contacts svg {
+    color: var(--color-main);
+  }
+
+  .theme-switcher,
+  .search-btn,
+  .share-btn {
+    @apply w-[40px] h-[40px] inline-flex items-center justify-center text-white;
+    background-color: var(--color-main);
+  }
 }
