--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -5,340 +5,405 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rajdhani:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 :root {
-  --color-main: #dc2626;
-  --color-text: #6c6b6b;
-  --color-heading: #000;
-  font-family: "Montserrat", "sans-serif";
+--color-main: #dc2626;
+--color-text: #6c6b6b;
+--color-heading: #000;
+font-family: "Montserrat", "sans-serif";
 }
 
 @layer base {
-  *::selection {
-    @apply bg-rose-100;
-  }
-  h1,
-  .h1 {
-    @apply text-4xl font-bold mb-6;
-  }
-  h2 {
-    @apply text-3xl font-bold mb-5 mt-7;
-  }
-  h3 {
-  }
-  h4 {
-  }
+*::selection {
+@apply bg-rose-100;
+}
+h1,
+.h1 {
+@apply text-4xl font-semibold mb-6;
+}
+h2 {
+@apply text-3xl font-semibold mb-5 mt-7;
+}
+h3 {
+}
+h4 {
+}
 
-  h2 + p {
-    @apply mt-0;
-  }
+h2 + p {
+@apply mt-0;
+}
 
-  p {
-    @apply text-[18px] my-3;
-  }
+p {
+@apply text-[18px] my-3;
+}
 
-  ul {
-    @apply pl-3;
-  }
-  ul li {
-    @apply list-disc my-2;
-  }
+ul {
+@apply pl-3;
+}
+ul li {
+@apply list-disc my-2;
+}
 }
 
 @layer components {
-  #loom-companion-mv3 {
-    display: none;
-  }
-  html,
-  body,
-  #___gatsby,
-  #gatsby-focus-wrapper {
-    @apply flex flex-col min-h-screen bg-white;
-  }
-  .header-top,
-  .footer {
-    @apply bg-black text-white py-3;
-  }
-  .page-wrapper {
-    @apply flex-1;
-  }
-  .page-main {
-    @apply my-10;
-  }
-  .container {
-    @apply mx-auto max-w-screen-xl px-6;
-  }
+#loom-companion-mv3 {
+display: none;
+}
+html,
+body,
+#___gatsby,
+#gatsby-focus-wrapper {
+@apply flex flex-col min-h-screen bg-white;
+}
+.header-top,
+.footer {
+@apply bg-black text-white py-3;
+}
 
-  section {
-    @apply my-4;
-  }
 
-  .logo {
-    @apply text-sm font-thin tracking-wide select-none;
-  }
-  .logo b {
-    @apply text-red-600 font-bold text-2xl;
-  }
+.page-wrapper {
+@apply flex-1;
+}
+.page-main {
+@apply my-10;
+}
+.container {
+@apply mx-auto max-w-screen-md lg:max-w-screen-xl px-6;
+}
 
-  .header .container {
-    @apply flex justify-between items-center gap-3;
-  }
+section {
+@apply my-4;
+}
 
-  .header-cta {
-    @apply flex gap-2;
-  }
+.logo {
+@apply text-sm font-thin tracking-wide select-none;
+}
+.logo b {
+@apply text-red-600 font-bold text-2xl;
+}
 
-  .header-btm {
-    @apply py-4 bg-white border-b border-gray-100 shadow-sm;
-  }
+.header .container {
+@apply flex justify-between items-center gap-3;
+}
 
-  .header-btm .header-menu {
-    @apply gap-2;
-  }
+.header-cta {
+@apply flex gap-2;
+}
 
-  .header-menu,
-  .footer-menu {
-    @apply flex flex-wrap items-center justify-center gap-x-5 gap-y-2 mx-auto;
-  }
+.header-btm {
+@apply py-4 bg-white border-b border-gray-100 shadow-sm;
+}
 
-  .footer-menu {
-    @apply uppercase;
-  }
+.header-btm .header-menu {
+@apply gap-2;
+}
 
-  .header-menu a,
-  .footer-menu a {
-    @apply font-medium hover:text-red-600 transition duration-300;
-  }
+.header-menu,
+.footer-menu {
+@apply flex flex-wrap items-center justify-center gap-x-5 gap-y-2 mx-auto;
+}
+.header-top .header-menu {
+@apply hidden md:flex;
+}
+.footer-menu {
+@apply uppercase;
+}
 
-  .footer .container,
-  .footer-top .container {
-    @apply flex justify-center lg:justify-between items-center flex-wrap gap-y-3;
-  }
+.header-menu a,
+.footer-menu a {
+@apply font-medium hover:text-red-600 transition duration-300;
+}
 
-  .footer-top {
-    @apply py-4;
-  }
+.footer .container,
+.footer-top .container {
+@apply flex justify-center lg:justify-between items-center flex-wrap gap-4 gap-y-3;
+}
 
-  .footer-mdl .container {
-    @apply flex justify-center py-4 gap-4 opacity-50 border-t border-gray-500;
-  }
+.footer-top {
+@apply py-4;
+}
 
-  .footer-btm .container {
-    @apply flex justify-center opacity-50;
-  }
+.footer-mdl .container {
+@apply flex justify-center py-4 gap-4 opacity-50 border-t border-gray-500;
+}
 
-  .cards {
-    @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6;
-  }
+.footer-btm .container {
+@apply flex justify-center opacity-50;
+}
 
-  .card {
-    @apply flex flex-col justify-between gap-2 p-6 bg-white border border-gray-200 shadow-slate-100 shadow-xl hover:shadow-none transition;
-  }
+.cards {
+@apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6;
+}
 
-  .card-lg {
-    @apply xl:col-span-2 xl:col-start-1;
-  }
+.card {
+@apply flex flex-col justify-between  bg-white border border-gray-200 shadow-slate-100 shadow-xl hover:shadow-none transition;
+}
 
-  .card-lg-l {
-    @apply xl:col-span-2 xl:col-start-1;
-  }
+.card-lg {
+@apply xl:col-span-2 xl:col-start-1;
+}
 
-  .card-lg-r {
-    @apply xl:col-span-2 xl:col-start-3;
-  }
+.card-lg-l {
+@apply xl:col-span-2 xl:col-start-1;
+}
 
-  .cards .card:nth-child(7) {
-    @apply col-span-1 md:col-span-2 lg:col-span-2 xl:col-span-1;
-  }
+.card-lg-r {
+@apply xl:col-span-2 xl:col-start-3;
+}
 
-  .card-title {
-    @apply text-2xl font-bold mb-2;
-  }
+.cards .card:nth-child(7) {
+@apply col-span-1 md:col-span-2 lg:col-span-2 xl:col-span-1;
+}
 
-  .card-desc {
-    @apply opacity-60;
-  }
+.card-title {
+@apply text-xl font-bold mb-2 mt-1;
+}
 
-  .card-footer {
-    @apply flex flex-wrap gap-3 border-t-2 pt-4 mt-4 text-[12px];
-  }
+.card-desc {
+@apply opacity-60;
+}
 
-  .card-img {
-    @apply -m-6 mb-4 relative transition;
-  }
+.card-container {
+@apply p-6;
+}
 
-  .card-img > .card-info {
-    @apply absolute right-2 top-2;
-  }
+.card-footer {
+@apply flex flex-wrap gap-3 border-t-2 pt-4 mt-4 text-[12px];
+}
 
-  .card-info {
-    @apply mb-4 flex justify-between gap-3;
-  }
+.card-img {
+@apply relative transition;
+}
+.card-img .gatsby-image-wrapper {
+height: 100%;
+width: 100%;
+}
+.card-img > .card-info {
+@apply absolute right-0 top-0;
+}
+.card-info {
+@apply p-6 pb-0 flex justify-between gap-3;
+}
+.card-auth,
+.card-date {
+@apply flex flex-wrap items-center gap-2 text-[12px];
+}
 
-  .card-auth,
-  .card-date {
-    @apply flex flex-wrap gap-2 text-[12px];
-  }
+.card-date svg {
+@apply w-[16px] h-[16px];
+}
 
-  .card:hover .card-title {
-    @apply text-rose-600 transition underline;
-  }
+.card:hover .card-title, .card_row:hover .card-title {
+@apply text-rose-600 transition underline;
+}
+.card:hover img {
+@apply scale-105 transition duration-300;
+}
 
-  .post-actions {
-    @apply flex gap-2;
-  }
+.card_row {
+@apply grid gap-4 items-center;
+grid-template-columns: 75px 1fr;
+}
 
-  .card:hover img {
-    @apply scale-105 transition duration-300;
-  }
+.card_row .card-img {
+@apply w-[75px] h-[75px] object-cover m-0 rounded-lg overflow-hidden;
+}
 
-  .chip {
-    @apply inline-flex bg-red-100 text-red-600 text-[10px] tracking-widest font-bold uppercase px-4 py-2 rounded-full;
-  }
+.card_row .card-content {
+@apply flex flex-col;
+}
 
-  .banners {
-    @apply grid gap-6 my-6 items-stretch;
-  }
+.card_row .card-title {
+@apply text-[16px] font-semibold;
+line-height: 1.3;
+}
 
-  .banners > .card,
-  .card-active {
-    @apply border border-rose-600 bg-rose-600 text-white;
-    border-width: 0;
-  }
+.cards_2 .card:last-child {
+@apply col-span-1 md:col-span-2 lg:col-span-1 xl:col-span-1;
+}
 
-  .banners > .card:hover .card-title {
-    @apply text-white;
-  }
+.cards_3 .card {
+@apply col-span-1 md:col-span-1 lg:col-span-1 xl:col-span-1;
+}
+.cards_3 .card:last-child {
+@apply col-span-1  md:col-span-1 lg:col-span-3 lg:grid grid-cols-2 xl:col-span-1 xl:grid-cols-1 items-center;
+}
+.cards_3 .card:last-child .card-img {
+}
 
-  .banners img {
-    @apply block object-cover  w-[100%] h-[100%] max-h-[300px];
-  }
 
-  .banner {
-    @apply border border-gray-200 shadow-slate-100 shadow-xl;
-  }
+.chip {
+@apply inline-flex bg-red-100 text-red-600 text-[10px] tracking-widest font-bold uppercase px-4 py-2 rounded-full;
+}
 
-  .banners_1 {
-    @apply grid-cols-1 lg:grid-cols-2;
-  }
+.banners {
+@apply grid gap-6 my-6 items-stretch;
+}
 
-  .banners_1 .banner {
-    display: none;
-    @apply xl:flex;
-  }
+.banners > .card,
+.card-active {
+@apply border border-rose-600 bg-rose-600 text-white;
+border-width: 0;
+}
 
-  .page-single {
-    @apply grid gap-4 grid-cols-1;
-    grid-template-columns: 2fr 1fr;
-  }
+.banners > .card:hover .card-title {
+@apply text-white;
+}
 
-  @media only screen and (max-width: 768px) {
-    .page-single {
-      grid-template-columns: 1fr;
-    }
-  }
+.banners img {
+@apply block object-cover  w-[100%] h-[100%] max-h-[300px];
+}
 
-  .post h1 {
-    @apply mb-2 text-2xl font-medium;
-  }
-  .post h2,
-  .post h3,
-  .post h4,
-  .post h5,
-  .post h6 {
-    @apply mb-2 text-xl font-medium;
-  }
+.banner {
+@apply border border-gray-200 shadow-slate-100 shadow-xl;
+}
 
-  .post-header {
-    @apply flex flex-wrap gap-3 justify-between mb-8 mt-3;
-  }
+.banners_1 {
+@apply grid-cols-1 xl:grid-cols-2;
+}
 
-  .post-header svg {
-    width: 20px;
-    height: 20px;
-  }
+.banners_1 .banner {
+display: none;
+@apply xl:flex;
+}
 
-  .post-footer {
-    @apply mt-10 flex flex-wrap gap-4 justify-between items-center;
-  }
+.page-single {
+@apply grid gap-8 grid-cols-1;
+grid-template-columns: 2fr 1fr;
+}
 
-  .post-poster {
-    @apply w-full object-cover aspect-auto rounded-xl;
-  }
+@media only screen and (max-width: 1023px) {
+.page-single {
+grid-template-columns: 1fr;
+}
+}
 
-  .post-lead {
-    @apply text-lg mt-3 mb-6 opacity-60;
-  }
+.post {
+@apply mt-0;
+}
 
-  .post-content p {
-    @apply text-[15px] my-2 opacity-60;
-  }
 
-  .post a:hover {
-    color: var(--color-main);
-  }
+.post h1 {
+@apply mb-3 text-2xl font-semibold;
+}
+.post h2,
+.post h3,
+.post h4,
+.post h5,
+.post h6 {
+@apply mb-3 text-xl font-semibold;
+}
+.post-actions {
+@apply flex gap-2;
+}
+.post-header {
+@apply flex flex-wrap gap-3 justify-between mb-8 mt-3;
+}
 
-  .page-content a {
-    word-break: break-all;
-    color: var(--color-main);
-    @apply underline transition;
-  }
+.post-header svg {
+width: 20px;
+height: 20px;
+}
 
-  .sidebar-block {
-    @apply p-6 bg-gray-100 rounded-lg;
-  }
+.post-header-inner {
+@apply flex flex-wrap items-center gap-3;
+}
 
-  .sidebar-block h2 {
-    @apply mt-0;
-  }
+.post-footer {
+@apply mt-10 flex flex-wrap gap-4 justify-between items-center;
+}
 
-  .date {
-    @apply flex gap-1 items-center text-[12px];
-  }
+.post-poster {
+@apply w-full object-cover aspect-auto rounded-xl;
+}
 
-  .soc {
-    @apply flex gap-2;
-  }
+.post-lead {
+@apply text-lg mt-3 mb-6 opacity-60;
+}
 
-  .soc a {
-    @apply flex items-center justify-center text-black bg-gray-200 w-[40px] h-[40px] rounded-sm transition;
-  }
+.post-authors {
+@apply flex items-center gap-3;
+}
 
-  .soc a:hover {
-    background-color: var(--color-main);
-    color: #fff;
-  }
+.post-author {
+@apply flex items-center gap-3;
+}
 
-  .soc_main a {
-    background-color: var(--color-main);
-    @apply text-white;
-  }
+.post-authors b {
+@apply font-semibold;
+}
+.post-content p {
+@apply text-[15px] my-2 opacity-60;
+}
 
-  .soc_main a:hover {
-    @apply text-white bg-gray-800;
-  }
+.post a:hover {
+color: var(--color-main);
+}
 
-  .tags {
-    @apply flex items-center gap-2;
-  }
+.page-content a {
+word-break: break-all;
+color: var(--color-main);
+@apply underline transition;
+}
 
-  .tags a {
-    color: var(--color-main);
-  }
+.sidebar-block {
+@apply p-6 bg-gray-50 rounded-lg;
+}
 
-  .contacts {
-    @apply flex gap-x-6 gap-y-1 items-center justify-center flex-wrap;
-  }
-  .contacts a {
-    @apply flex items-center gap-2;
-  }
+.sidebar-block h2 {
+@apply mt-0 text-2xl;
+}
 
-  .contacts svg {
-    color: var(--color-main);
-  }
+.sidebar-post {
+@apply grid gap-4;
+}
+.date {
+@apply flex gap-1 items-center text-[12px];
+}
 
-  .theme-switcher,
-  .search-btn,
-  .share-btn {
-    @apply w-[40px] h-[40px] inline-flex items-center justify-center text-white;
-    background-color: var(--color-main);
-  }
+.soc {
+@apply flex gap-2;
+}
+
+.soc a {
+@apply flex items-center justify-center text-black bg-gray-200 w-[40px] h-[40px] rounded-sm transition;
+}
+
+.soc a:hover {
+background-color: var(--color-main);
+color: #fff;
+}
+
+.soc_main a {
+background-color: var(--color-main);
+@apply text-white;
+}
+
+.soc_main a:hover {
+@apply text-white bg-gray-800;
+}
+
+.tags {
+@apply flex items-center gap-2;
+}
+
+.tags a {
+color: var(--color-main);
+}
+
+.contacts {
+@apply flex gap-x-6 gap-y-1 items-center justify-center flex-wrap;
+}
+.contacts a {
+@apply flex items-center gap-2;
+}
+
+.contacts svg {
+color: var(--color-main);
+}
+
+.theme-switcher,
+.search-btn,
+.share-btn {
+@apply w-[40px] h-[40px] inline-flex items-center justify-center text-white;
+background-color: var(--color-main);
+}
 }
