--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -15,6 +15,11 @@ $white: #fff;
 $black: #000;
 $main: var(--color-main);
 
+$color_1: #4867aa;
+$color_2: #1ea1f1;
+$color_3: #007bb6;
+$color_4: #fe0000;
+
 $grad: linear-gradient(293.61deg, #f19204 -1.57%, #ffd800 108.89%);
 $grad_1: linear-gradient(180deg, #713517 0%, #1a1b1b 100%);
 
