--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -6,6 +6,7 @@
 
 :root {
     --color-main: #dc2626;
+    --color-primary: #1f2937; //#5300ff;
     --color-text: #6c6b6b;
     --color-heading: #000;
     font-family: "Montserrat", "sans-serif";
