--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -12,7 +12,7 @@
     body,
     #___gatsby,
     #gatsby-focus-wrapper {
-        @apply flex flex-col min-h-screen bg-white;
+        @apply flex flex-col min-h-screen bg-white dark:bg-dark_1 dark:text-white;
     }
 
 
