--- a/src/assets/styles/_post.scss
+++ b/src/assets/styles/_post.scss
@@ -4,6 +4,10 @@
             @apply uppercase text-2xl font-semibold;
         }
 
+        p, li {
+            @apply dark:text-[#87909f];
+        }
+
         &-wrapper {
             @apply flex-1;
         }
@@ -40,7 +44,7 @@
         @apply flex flex-col gap-8;
 
         &-block {
-            @apply p-6 bg-gray-50 rounded-lg w-full;
+            @apply p-6 bg-gray-50 rounded-lg w-full dark:bg-[#111621];
 
             h2 {
                 @apply mt-0 text-2xl;
@@ -98,7 +102,7 @@
         }
 
         &-lead {
-            @apply text-lg mt-3 mb-6 opacity-60;
+            @apply text-lg mt-3 mb-6 opacity-60 dark:opacity-100 dark:text-[#87909f];
         }
 
         &-authors {
@@ -117,7 +121,7 @@
 
             p,
             li {
-                @apply text-[15px] my-2 opacity-60;
+                @apply text-[15px] my-2 opacity-60 dark:opacity-100 dark:text-[#87909f];
 
             }
 
