--- a/src/assets/styles/_nav.scss
+++ b/src/assets/styles/_nav.scss
@@ -1,3 +1,20 @@
+%a {
+    position: relative;
+    &::after {
+        content: '';
+        display: block;
+        margin-top: 2px;
+        width: 0;
+        height: 2px;
+        background: var(--color-main);
+        transition: $trs;
+    }
+
+    &:hover::after {
+        width: 100%;
+    }
+}
+
 @layer components {
 
     .header-top,
@@ -34,8 +51,25 @@
         @apply flex flex-wrap items-center justify-center gap-x-5 gap-y-2 mx-auto;
 
         a {
-            @apply font-medium hover:text-main transition duration-300;
+            @apply font-medium hover:text-main;
+            @extend %a;
         }
+    }
+
+    .menu-dd {
+        @apply relative inline-block;
+
+        &-toggle {
+            @apply flex gap-2 items-center;
+
+            svg {
+                @apply text-white;
+            }
+        }
+    }
+
+    .menu-sub {
+        @apply absolute right-0 z-10 mt-4 p-6 w-56 origin-top-right rounded-md focus:outline-none bg-dark_2 flex flex-col gap-3 border border-gray-800 uppercase;
     }
 
 
@@ -67,6 +101,30 @@
     }
 
 
+    .drawer {
+        @apply fixed top-0 left-0 z-50 w-full h-full p-6 m-0 bg-dark_2 text-white max-w-screen-sm transition -translate-x-full;
+
+        &.open {
+            @apply translate-x-0;
+        }
+
+        &-header {
+            @apply flex items-center justify-between;
+        }
+
+        &-menu {
+            @apply grid gap-4 mt-8;
+        }
+
+        &-toggle {
+            @apply flex items-center justify-center w-[40px] h-[40px] bg-main rounded-sm md:hidden;
+
+            svg {
+                width: 20px;
+                height: 20px;
+            }
+        }
+    }
 
 
 
