--- a/src/assets/styles/_card.scss
+++ b/src/assets/styles/_card.scss
@@ -1,120 +1,119 @@
 @layer components {
+  .cards {
+    @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6;
 
-    .cards {
-        @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6;
+    & .card:nth-child(7) {
+      @apply col-span-1 md:col-span-2 lg:col-span-2 xl:col-span-1;
+    }
+  }
 
-        & .card:nth-child(7) {
-            @apply col-span-1 md:col-span-2 lg:col-span-2 xl:col-span-1;
-        }
+  .card {
+    @apply flex flex-col justify-between bg-white border border-gray-200 dark:bg-dark_2 dark:shadow-slate-950 dark:shadow-none dark:border-none shadow-slate-100 shadow-xl hover:shadow-none transition rounded-xl overflow-hidden;
+
+    &:hover {
+      img {
+        @apply scale-105 transition duration-300;
+      }
     }
 
+    &-lg {
+      @apply xl:col-span-2;
+
+      &-l {
+        @apply xl:col-span-2 xl:col-start-1;
+      }
+
+      &-r {
+        @apply xl:col-span-2 xl:col-start-3;
+      }
+    }
+
+    &-title {
+      @apply text-xl font-bold mb-2 mt-3;
+    }
+
+    &-desc {
+      @apply opacity-60 dark:opacity-100 dark:text-[#87909f];
+    }
+
+    &-container {
+      @apply flex-1 flex flex-col justify-between p-6;
+    }
+
+    &-footer {
+      @apply flex flex-wrap gap-3 border-t-0 pt-4 mt-4 text-[12px] dark:border-t-slate-800;
+    }
+
+    &-img {
+      @apply relative transition;
+
+      & .gatsby-image-wrapper {
+        height: 100%;
+        width: 100%;
+      }
+
+      & > .card-info {
+        @apply absolute right-0 top-0;
+      }
+    }
+
+    &-info {
+      @apply p-6 pb-0 flex justify-between gap-3;
+    }
+
+    &-auth,
+    &-date {
+      @apply flex flex-wrap items-center gap-2 text-[12px];
+    }
+
+    &-date {
+      svg {
+        @apply w-[16px] h-[16px];
+      }
+    }
+  }
+
+  .card:hover .card-title,
+  .card_row:hover .card-title {
+    @apply transition underline;
+    color: var(--color-main);
+  }
+
+  .card_list {
+    @apply flex flex-col sm:grid col-span-4;
+    grid-template-columns: 1fr 2fr;
+  }
+  .card_row {
+    @apply grid gap-4 items-center;
+    grid-template-columns: 75px 1fr;
+
+    & .card-img {
+      @apply w-[75px] h-[75px] object-cover m-0 rounded-lg overflow-hidden;
+    }
+
+    & .card-content {
+      @apply flex flex-col;
+    }
+
+    & .card-title {
+      @apply text-[16px] font-semibold;
+      line-height: 1.3;
+    }
+  }
+
+  .cards_2 {
+    .card:last-child {
+      @apply col-span-1 md:col-span-2 lg:col-span-1 xl:col-span-1;
+    }
+  }
+
+  .cards_3 {
     .card {
-        @apply flex flex-col justify-between bg-white border border-gray-200 dark:bg-dark_2 dark:shadow-slate-950 dark:shadow-none dark:border-none shadow-slate-100 shadow-xl hover:shadow-none transition rounded-xl overflow-hidden;
+      @apply col-span-1 md:col-span-1 lg:col-span-1 xl:col-span-1;
 
-        &:hover {
-            img {
-                @apply scale-105 transition duration-300;
-            }
-        }
-
-        &-lg {
-            @apply xl:col-span-2 xl:col-start-1;
-
-            &-l {
-                @apply xl:col-span-2 xl:col-start-1;
-            }
-
-            &-r {
-                @apply xl:col-span-2 xl:col-start-3;
-            }
-        }
-
-        &-title {
-            @apply text-xl font-bold mb-2 mt-3;
-        }
-
-        &-desc {
-            @apply opacity-60 dark:opacity-100 dark:text-[#87909f];
-        }
-
-        &-container {
-            @apply flex-1 flex flex-col justify-between p-6;
-        }
-
-        &-footer {
-            @apply flex flex-wrap gap-3 border-t-0 pt-4 mt-4 text-[12px] dark:border-t-slate-800;
-        }
-
-        &-img {
-            @apply relative transition;
-
-            & .gatsby-image-wrapper {
-                height: 100%;
-                width: 100%;
-            }
-
-            &>.card-info {
-                @apply absolute right-0 top-0;
-            }
-        }
-
-        &-info {
-            @apply p-6 pb-0 flex justify-between gap-3;
-        }
-
-        &-auth,
-        &-date {
-            @apply flex flex-wrap items-center gap-2 text-[12px];
-        }
-
-        &-date {
-            svg {
-                @apply w-[16px] h-[16px];
-            }
-        }
-
+      &:last-child {
+        @apply col-span-1 md:col-span-1 lg:col-span-3 lg:grid grid-cols-2 xl:col-span-1 xl:grid-cols-1 items-center;
+      }
     }
-
-
-    .card:hover .card-title,
-    .card_row:hover .card-title {
-        @apply transition underline;
-        color: var(--color-main);
-    }
-
-
-    .card_row {
-        @apply grid gap-4 items-center;
-        grid-template-columns: 75px 1fr;
-
-        & .card-img {
-            @apply w-[75px] h-[75px] object-cover m-0 rounded-lg overflow-hidden;
-        }
-
-        & .card-content {
-            @apply flex flex-col;
-        }
-
-        & .card-title {
-            @apply text-[16px] font-semibold;
-            line-height: 1.3;
-        }
-    }
-
-
-    .cards_2 {
-        .card:last-child {
-            @apply col-span-1 md:col-span-2 lg:col-span-1 xl:col-span-1;
-        }
-    }
-
-    .cards_3 {
-        .card {
-            @apply col-span-1 md:col-span-1 lg:col-span-1 xl:col-span-1;
-
-            &:last-child {
-                @apply col-span-1 md:col-span-1 lg:col-span-3 lg:grid grid-cols-2 xl:col-span-1 xl:grid-cols-1 items-center;
-            }
-        }
-    }
+  }
 }
