--- a/src/assets/styles/_btn.scss
+++ b/src/assets/styles/_btn.scss
@@ -122,7 +122,7 @@
     @apply mt-6 flex flex-wrap gap-3;
 
     a {
-      @apply min-w-[45px] flex items-center justify-center py-2 px-4 border hover:bg-main hover:text-white transition;
+      @apply min-w-[45px] flex items-center justify-center py-2 px-4 border dark:border-gray-800 hover:bg-main hover:text-white transition rounded;
     }
   }
 }
