--- a/src/assets/styles/_post.scss
+++ b/src/assets/styles/_post.scss
@@ -104,7 +104,7 @@
     }
 
     &-lead {
-      @apply text-lg mt-3 mb-6 opacity-60 dark:opacity-100 dark:text-[#87909f];
+      @apply text-lg mt-3 mb-6 opacity-60 dark:opacity-100 dark:text-dark_5;
     }
 
     &-authors {
